@@ -41,6 +41,19 @@ typedef struct
 }
 ZBX_USER_MSG;
 
+typedef struct
+{
+	zbx_uint64_t	actionid;
+	char		*shortdata;
+	char		*longdata;
+	char		*r_shortdata;
+	char		*r_longdata;
+	int		esc_period;
+	unsigned char	eventsource;
+	unsigned char	recovery_msg;
+}
+DB_ACTION;
+
 extern unsigned char	process_type, daemon_type;
 extern int		server_num, process_num;
 
@@ -982,8 +995,8 @@ static void	process_recovery_msg(DB_ESCALATION *escalation, DB_EVENT *event, DB_
 					break;
 			}
 
-			subject_dyn = zbx_strdup(NULL, action->shortdata);
-			message_dyn = zbx_strdup(NULL, action->longdata);
+			subject_dyn = zbx_strdup(NULL, action->r_shortdata);
+			message_dyn = zbx_strdup(NULL, action->r_longdata);
 
 			substitute_simple_macros(&action->actionid, event, r_event, &userid, NULL, NULL, NULL, NULL,
 					&subject_dyn, MACRO_TYPE_MESSAGE_RECOVERY, NULL, 0);
@@ -1122,14 +1135,17 @@ static void	free_event_info(DB_EVENT *event)
  *             source    - [IN] the esclation event source                    *
  *             error     - [OUT] message in case escalation is cancelled      *
  *                                                                            *
+ * Return value: FAIL if dependent trigger is in PROBLEM state                *
+ *               SUCCEED otherwise                                            *
+ *                                                                            *
  ******************************************************************************/
-static void	check_escalation_trigger(zbx_uint64_t triggerid, unsigned char source, char **error)
+static int	check_escalation_trigger(zbx_uint64_t triggerid, unsigned char source, char **error)
 {
 	DC_TRIGGER		trigger;
-	int			i, errcode, *errcodes = NULL;
 	zbx_vector_uint64_t	functionids, itemids;
 	DC_ITEM			*items = NULL;
 	DC_FUNCTION		*functions = NULL;
+	int			i, errcode, *errcodes = NULL, ret = SUCCEED;
 
 	/* trigger disabled or deleted? */
 	DCconfig_get_triggers_by_triggerids(&trigger, &triggerid, &errcode, 1);
@@ -1199,8 +1215,12 @@ static void	check_escalation_trigger(zbx_uint64_t triggerid, unsigned char sourc
 
 	zbx_vector_uint64_destroy(&itemids);
 	zbx_vector_uint64_destroy(&functionids);
+
+	ret = DCconfig_check_trigger_dependencies(trigger.triggerid);
 out:
 	DCconfig_clean_triggers(&trigger, &errcode, 1);
+
+	return ret;
 }
 
 /******************************************************************************
@@ -1218,14 +1238,14 @@ out:
  *           information could not be gathered, its 'actionid' is set to 0.   *
  *                                                                            *
  ******************************************************************************/
-static void	check_escalation(const DB_ESCALATION *escalation, DB_ACTION *action, char **error)
+static int	check_escalation(const DB_ESCALATION *escalation, DB_ACTION *action, char **error)
 {
 	const char	*__function_name = "check_escalation";
 	DB_RESULT	result;
 	DB_ROW		row;
 	unsigned char	source = 0xff, object = 0xff;
 	DC_ITEM		item;
-	int		errcode;
+	int		errcode, ret = SUCCEED;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() escalationid:" ZBX_FS_UI64 " status:%s",
 			__function_name, escalation->escalationid, zbx_escalation_status_string(escalation->status));
@@ -1244,7 +1264,7 @@ static void	check_escalation(const DB_ESCALATION *escalation, DB_ACTION *action,
 	DBfree_result(result);
 
 	if (NULL == *error && EVENT_OBJECT_TRIGGER == object)
-		check_escalation_trigger(escalation->triggerid, source, error);
+		ret = check_escalation_trigger(escalation->triggerid, source, error);
 
 	if (NULL == *error && EVENT_SOURCE_INTERNAL == source)
 	{
@@ -1270,31 +1290,13 @@ static void	check_escalation(const DB_ESCALATION *escalation, DB_ACTION *action,
 		}
 	}
 
-	switch (escalation->status)
-	{
-		case ESCALATION_STATUS_ACTIVE:
-			result = DBselect(
-					"select actionid,name,status%s"
-					" from actions"
-					" where actionid=" ZBX_FS_UI64,
-					NULL == action ? "" : ",eventsource,esc_period"
-						",def_shortdata,def_longdata,recovery_msg",
-					escalation->actionid);
-			break;
-		case ESCALATION_STATUS_RECOVERY:
-		case ESCALATION_STATUS_SLEEP:
-			result = DBselect(
-					"select actionid,name,status%s"
-					" from actions"
-					" where actionid=" ZBX_FS_UI64,
-					NULL == action ? "" : ",eventsource,esc_period"
-						",r_shortdata,r_longdata,recovery_msg",
-					escalation->actionid);
-			break;
-		default:
-			THIS_SHOULD_NEVER_HAPPEN;
-			return;
-	}
+	result = DBselect(
+			"select actionid,name,status%s"
+			" from actions"
+			" where actionid=" ZBX_FS_UI64,
+			NULL == action ? "" : ",eventsource,esc_period"
+				",def_shortdata,def_longdata,r_shortdata,r_longdata,recovery_msg",
+			escalation->actionid);
 
 	if (NULL != (row = DBfetch(result)))
 	{
@@ -1309,7 +1311,9 @@ static void	check_escalation(const DB_ESCALATION *escalation, DB_ACTION *action,
 			action->esc_period = atoi(row[4]);
 			action->shortdata = zbx_strdup(NULL, row[5]);
 			action->longdata = zbx_strdup(NULL, row[6]);
-			action->recovery_msg = atoi(row[7]);
+			action->r_shortdata = zbx_strdup(NULL, row[7]);
+			action->r_longdata = zbx_strdup(NULL, row[8]);
+			action->recovery_msg = atoi(row[9]);
 		}
 	}
 	else
@@ -1321,44 +1325,51 @@ static void	check_escalation(const DB_ESCALATION *escalation, DB_ACTION *action,
 	}
 	DBfree_result(result);
 
-	zabbix_log(LOG_LEVEL_DEBUG, "End of %s() error: %s", __function_name, ZBX_NULL2STR(*error));
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%s error: '%s'", __function_name, zbx_result_string(ret),
+			ZBX_NULL2STR(*error));
+
+	return ret;
 }
 
-static void	execute_escalation(DB_ESCALATION *escalation)
+static void	execute_escalation(DB_ESCALATION *escalation, DB_ACTION *action, const char *error)
 {
 	const char	*__function_name = "execute_escalation";
-	DB_ACTION	action;
 	DB_EVENT	event, r_event;
-	char		*error = NULL;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() escalationid:" ZBX_FS_UI64 " status:%s",
 			__function_name, escalation->escalationid, zbx_escalation_status_string(escalation->status));
 
-	check_escalation(escalation, &action, &error);
-
-	if (0 != action.actionid)
+	if (0 != action->actionid)
 	{
-		if (NULL != error)
-		{
-			action.longdata = zbx_dsprintf(action.longdata, "NOTE: Escalation cancelled: %s\n%s",
-					error, action.longdata);
-		}
-
 		switch (escalation->status)
 		{
 			case ESCALATION_STATUS_ACTIVE:
+				if (NULL != error)
+				{
+					action->longdata = zbx_dsprintf(action->longdata,
+							"NOTE: Escalation cancelled: %s\n%s",
+							error, action->longdata);
+				}
+
 				if (SUCCEED == get_event_info(escalation->eventid, &event))
 				{
-					execute_operations(escalation, &event, &action);
+					execute_operations(escalation, &event, action);
 					free_event_info(&event);
 				}
 				break;
 			case ESCALATION_STATUS_RECOVERY:
+				if (NULL != error)
+				{
+					action->r_longdata = zbx_dsprintf(action->r_longdata,
+							"NOTE: Escalation cancelled: %s\n%s",
+							error, action->r_longdata);
+				}
+
 				if (SUCCEED == get_event_info(escalation->eventid, &event))
 				{
 					if (SUCCEED == get_event_info(escalation->r_eventid, &r_event))
 					{
-						process_recovery_msg(escalation, &event, &r_event, &action);
+						process_recovery_msg(escalation, &event, &r_event, action);
 						free_event_info(&r_event);
 					}
 					free_event_info(&event);
@@ -1367,19 +1378,23 @@ static void	execute_escalation(DB_ESCALATION *escalation)
 			default:
 				break;
 		}
-
-		zbx_free(action.longdata);
-		zbx_free(action.shortdata);
 	}
 
 	if (NULL != error)
 	{
 		escalation->status = ESCALATION_STATUS_COMPLETED;
 		zabbix_log(LOG_LEVEL_WARNING, "escalation cancelled: %s", error);
-		zbx_free(error);
 	}
 
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
+}
+
+static void	free_db_action(DB_ACTION *action)
+{
+	zbx_free(action->shortdata);
+	zbx_free(action->longdata);
+	zbx_free(action->r_shortdata);
+	zbx_free(action->r_longdata);
 }
 
 static int	process_escalations(int now, int *nextcheck)
@@ -1406,6 +1421,7 @@ static int	process_escalations(int now, int *nextcheck)
 	*nextcheck = now + CONFIG_ESCALATOR_FREQUENCY;
 	memset(&escalation, 0, sizeof(escalation));
 
+	/* we read escalations into @last_escalation variable and process @escalation, which was previously read */
 	do
 	{
 		unsigned char	esc_superseded = 0;
@@ -1439,6 +1455,7 @@ static int	process_escalations(int now, int *nextcheck)
 			goto next;
 		}
 
+		/* handle superseded escalations (multiple problem events) */
 		if (0 != last_escalation.escalationid)
 		{
 			esc_superseded = (escalation.actionid == last_escalation.actionid &&
@@ -1463,20 +1480,36 @@ static int	process_escalations(int now, int *nextcheck)
 
 		if (escalation.nextcheck <= now || 0 != escalation.r_eventid)
 		{
+			DB_ACTION	action;
+			char		*error = NULL;
+
 			DBbegin();
 
 			sql_offset = 0;
 
+			if (SUCCEED != check_escalation(&escalation, &action, &error))
+			{
+				/* Dependable trigger in PROBLEM state. If escalation is cancelled we process */
+				/* it normally in order to send notification about the error otherwise we     */
+				/* skip the escalation until dependable trigger changes value to OK.          */
+				if (NULL == error)
+				{
+					DBrollback();
+					free_db_action(&action);
+					goto next;
+				}
+			}
+
 			if (ESCALATION_STATUS_ACTIVE == escalation.status)
 			{
 				if (escalation.nextcheck <= now)
-					execute_escalation(&escalation);
+					execute_escalation(&escalation, &action, error);
 
-				/* execute recovery */
+				/* execute recovery if the same record has it */
 				if (ESCALATION_STATUS_COMPLETED != escalation.status && 0 != escalation.r_eventid)
 				{
 					escalation.status = ESCALATION_STATUS_RECOVERY;
-					execute_escalation(&escalation);
+					execute_escalation(&escalation, &action, error);
 				}
 				else if (0 != esc_superseded)
 				{
@@ -1505,14 +1538,9 @@ static int	process_escalations(int now, int *nextcheck)
 			}
 			else	/* ESCALATION_STATUS_SLEEP == escalation.status */
 			{
-				char	*error = NULL;
-
-				check_escalation(&escalation, NULL, &error);
-
 				if (NULL != error)
 				{
 					zabbix_log(LOG_LEVEL_WARNING, "escalation cancelled: %s", error);
-					zbx_free(error);
 
 					zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset,
 							"delete from escalations where escalationid=" ZBX_FS_UI64,
@@ -1527,6 +1555,9 @@ static int	process_escalations(int now, int *nextcheck)
 							escalation.nextcheck, escalation.escalationid);
 				}
 			}
+
+			free_db_action(&action);
+			zbx_free(error);
 
 			DBexecute("%s", sql);
 
